# game-python-WR-package

./: .gitignore  README.md
benfan_agent/: README.md  __init__.py  env.example  requirements.txt  signal.py  worker.py
plugins/WRTreasury/: .env-example  .env.example  README.md  __init__.py  config.py  plugin_metadata.yml  pyproject.toml
plugins/WRTreasury/example/: signal.py  worker.py
plugins/WRTreasury/example/basic/: example_usage.py
plugins/WRTreasury/example/benfan/: README.md  signal.py  worker.py
plugins/WRTreasury/examples/: example-agent.py  example-worker.py
plugins/WRTreasury/examples/template_agent/: signals.py  worker.py
plugins/WRTreasury/whackrock_plugin_gamesdk/: IWhackRockFund.json  __init__.py  example_usage.py  whackrock_fund_manager_gamesdk.py  whackrock_plugin.py
plugins/WRTreasury/whackrock_treasury_plugin_gamesdk/: __init__.py  config.py  treasury.py  uniswap.py
plugins/WRTreasury_prev/: .gitignore  pyproject.toml
plugins/WRTreasury_prev/examples/benfan_agent/: signals.py  worker.py
plugins/WRTreasury_prev/examples/template_agent/: signals.py  worker.py
plugins/WRTreasury_prev/whackrock_treasury_plugin_gamesdk/: uniswap.py  utils.py
