[tool.poetry]
name = "whackrock-treasury-plugin"
version = "0.1.0"
description = "WhackRock Treasury Plugin for GAME SDK - AI agent portfolio management"
authors = ["WhackRock Team"]
readme = "README.md"
packages = [{include = "whackrock_plugin_gamesdk"}]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^6.0.0"
game-sdk = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"