[project]
name = "whackrock-treasury-plugin-gamesdk"
version = "0.1.0"
description = "WhackRock Treasury plugin for GAME SDK"
authors = [
    {name = "WhackRock Labs", email = "dev@whackrock.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "web3>=6.16",
    "aiohttp>=3.9",
    "python-dotenv>=1.0.0",  # For loading .env variables
]

[project.entry-points."game_python.plugins"]
whackrock_treasury = "whackrock_treasury_plugin_gamesdk"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
